--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@emailjs/browser": "^4.3.3",
     "aos": "^2.3.4",
     "bootstrap": "^5.3.3",
     "next": "14.0.3",
