--- a/Master/package.json
+++ b/Master/package.json
@@ -19,7 +19,9 @@
     "react-hot-toast": "^2.4.1",
     "react-scroll-to-top": "^3.0.0",
     "react-visibility-sensor": "^5.1.1",
-    "sass": "^1.72.0",
     "swiper": "^9.1.1"
+  },
+  "devDependencies": {
+    "sass": "^1.72.0"
   }
 }
